--- a/src/template.html
+++ b/src/template.html
@@ -25,6 +25,93 @@
 	<!-- This contains the contents of the <svelte:head> component, if
 	     the current page has one -->
 	%sapper.head%
+
+	<script>
+		customElements.define('nav-home', class NavHome extends HTMLElement {
+
+			connectedCallback() {
+
+				this.innerHTML = `
+
+    <ion-header translucent>
+
+	 <ion-toolbar>
+
+	   <ion-title>Nav</ion-title>
+
+	 </ion-toolbar>
+
+    </ion-header>
+
+    <ion-content fullscreen>
+
+	 <ion-list>
+
+	 ${techs.map(tech => `
+
+		<ion-item button onclick="showDetail('${tech.title}')">
+
+		  <ion-icon slot="start" name="logo-${tech.icon}" style="color: ${tech.color};"></ion-icon>
+
+		  <ion-label>
+
+		    <h3>${tech.title}</h3>
+
+		  </ion-label>
+
+		</ion-item>
+
+	 `).join('\n')}
+
+	 </ion-list>
+
+    </ion-content>
+
+  `;
+
+			}
+
+		});
+
+		customElements.define('nav-detail', class NavDetail extends HTMLElement {
+
+			connectedCallback() {
+
+				this.innerHTML = `
+
+    <ion-header translucent>
+
+	 <ion-toolbar>
+
+	   <ion-buttons slot="start">
+
+		<ion-back-button defaultHref="/"></ion-back-button>
+
+	   </ion-buttons>
+
+	   <ion-title>${this.tech.title}</ion-title>
+
+	 </ion-toolbar>
+
+    </ion-header>
+
+    <ion-content fullscreen class="ion-padding">
+
+	 <ion-icon name="logo-${this.tech.icon}" style="color: ${this.tech.color};" size="large"></ion-icon>
+
+	 <p>${this.tech.description}</p>
+
+    </ion-content>
+
+  `;
+
+			}
+
+		});
+
+
+	</script>
+
 </head>
 
 <body>
